mType/tests/testFiles/annotation/error/unsupported_object_annotation_param_error.mt
// MYT-375: arbitrary object-valued annotation parameters remain unsupported.

annotation Payload {
    Object value;
}
